# ney-tack

app/: app.json  package-lock.json  package.json
app/android/app/: build.gradle
app/android/app/src/debug/java/com/marcusstenbeck/app/: ReactNativeFlipper.java
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/marcusstenbeck/app/: MainActivity.java  MainApplication.java
app/android/app/src/release/java/com/marcusstenbeck/app/: ReactNativeFlipper.java
app/ios/app/: Info.plist
app/ios/app.xcodeproj/: project.pbxproj
app/ios/app/Supporting/: Expo.plist
app/src/: App.tsx  _App.tsx  useBLE.ts  useTest.ts
pico/: CMakeLists.txt  blink.c  btstack_config.h  ltr303_i2c.h  my_i2c.h  mygatt.gatt  ney_tack.c
